# FuckYCursor

./: CMakeLists.txt  README_CPP.md  build_optimized.bat  main.cpp  main.py  manifest.xml  resource.rc
